package movement

import position.Position

class Movement(
    val from: Position,
    val to: Position
)
