package position

class Position(
    val x: Char,
    val y: Int
)
